[Dharmenn] Fixing passage alignment for candidates

--- a/app/assets/stylesheets/passages.scss
+++ b/app/assets/stylesheets/passages.scss
@@ -36,3 +36,7 @@
   }
 }
 
+.app-empty-passage p{
+  margin: 0 10px 27px 0;
+  border: 1px dashed lightgray;
+}
